fix whitespace issue with mobile layout

--- a/src/assets/sass/layout.scss
+++ b/src/assets/sass/layout.scss
@@ -103,7 +103,7 @@ body {
   .container {
     width: 100%;
     left: 0;
-    bottom: -100px;
+    bottom: -70px;
   }
 }
 
